# Resume-Builder

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  logging_config.py  makefile  pyproject.toml  requirements.txt
GUI/: README.md  __init__.py  app_context.py  constants.py  main.py  session_keys.py
GUI/pages/: __init__.py  ai_logs_page.py  cache_manager_page.py  my_resume.py  settings_page.py  tailor.py
cache/: README.md
latex/: README.md  template.tex
models/: README.md  job.py  resume.py
services/: README.md  ai_api_log.py  ai_log_buffer.py  cache_manager.py  gemini_configure.py  gemini_models.py  gemini_retry.py  gemini_text.py  job_scraper.py  latex_assets.py  latex_build.py  latex_parser.py  markdown_resume.py  prompts.py  resume_writer.py
templates/: README.md  ats_resume.tex  resume.tex.jinja  resume_v2_body.jinja  resume_v2_preamble.tex
